--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-  />
     <script
       type="text/javascript"
       src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js"
@@ -17,7 +12,7 @@
     <script>
       Kakao.init("9e6632ceaa7f6ed39f61d7c145f86991");
     </script>
-    <title>React App</title>
+    <title>CAL Calendar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
