--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <script
       type="text/javascript"
       src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js"
