--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link rel="shortcut icon" href="%PUBLIC_URL/favicon.ico" />
     <title>CAL Calendar</title>
   </head>
   <body>
